Refactor README.md and CI workflows for improved build and packaging process
- Updated README.md to clarify the automated build and packaging process using GitHub Actions, including detailed sections on output and ZIP contents.
- Enhanced `compile.yml` to create a complete ZIP package with both source code and compiled firmware, and upload it as an artifact.
- Revised `create-zip.yml` to focus on generating a source code-only ZIP for manual use, removing dependencies on compiled firmware.
- Improved documentation structure in workflows to better guide users on triggers and outputs.

--- a/.github/workflows/create-zip.yml
+++ b/.github/workflows/create-zip.yml
@@ -1,57 +1,19 @@
-name: Create Repository ZIP
+name: Create Source Code ZIP (Manual)
 
-# This workflow creates a ZIP file of the repository with the format: ddmmyyyy_reponame.zip
-# Example: 25112025_PID_simple_controll.zip
-#
-# Dependencies: Waits for compilation workflow to succeed first
-# Includes: Source code + compiled firmware files
-#
-# Triggers:
-# - Manual (workflow_dispatch)
-# - Release publication
-# - Push to main/master branches
+# This workflow creates a ZIP file of ONLY the source code (no compiled firmware)
+# Use this for manual ZIP creation when you don't need compiled binaries
+# For complete packages with firmware, use the Compile Arduino Sketches workflow
 
 on:
-  workflow_dispatch:  # Manual trigger
-  release:
-    types: [published]  # Trigger on release
-  push:
-    branches: [main, master]  # Trigger on push to main branches
-  workflow_call:  # Called by compilation workflow
+  workflow_dispatch:  # Manual trigger only
 
 jobs:
-  create-zip:
+  create-source-zip:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Download compiled firmware artifacts
-      if: github.event_name != 'workflow_dispatch'
-      uses: dawidd6/action-download-artifact@v3
-      with:
-        workflow: compile.yml
-        name: compiled-firmware
-        path: compiled-artifacts/
-        if_no_artifact_found: warn
-
-    - name: Organize compiled files
-      if: github.event_name == 'workflow_run' || github.event_name == 'release' || github.event_name == 'push'
-      run: |
-        # Move compiled files to their proper locations
-        if [ -d "compiled-artifacts/arduino_uno" ]; then
-          mkdir -p arduino_uno/compiled
-          cp -r compiled-artifacts/arduino_uno/* arduino_uno/compiled/ 2>/dev/null || true
-        fi
-
-        if [ -d "compiled-artifacts/attiny85" ]; then
-          mkdir -p attiny85/compiled
-          cp -r compiled-artifacts/attiny85/* attiny85/compiled/ 2>/dev/null || true
-        fi
-
-        # Clean up temporary directory
-        rm -rf compiled-artifacts
 
     - name: Get current date
       id: date
@@ -61,27 +23,20 @@ jobs:
       id: repo
       run: echo "name=${GITHUB_REPOSITORY#*/}" >> $GITHUB_OUTPUT
 
-    - name: Create ZIP file with compiled firmware
+    - name: Create source code ZIP (no compiled files)
       run: |
-        # Create ZIP including source code and compiled firmware
-        zip -r ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip . \
+        # Create ZIP of source code only (exclude compiled files)
+        zip -r ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}_source.zip . \
         -x "*.git*" \
         -x ".github/*" \
+        -x "*/compiled/*" \
         --quiet
 
-        echo "ZIP created: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip"
-        ls -lh ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
+        echo "Source ZIP created: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}_source.zip"
+        ls -lh ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}_source.zip
 
-    - name: Upload ZIP as artifact
+    - name: Upload source ZIP as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}
-        path: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
-
-    - name: Upload ZIP to release (if triggered by release)
-      if: github.event_name == 'release'
-      uses: softprops/action-gh-release@v1
-      with:
-        files: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        name: source-code-package
+        path: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}_source.zip
