--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -42,14 +42,6 @@ jobs:
         echo -e "\nATtiny85 compiled files:"
         ls -la attiny85/compiled/
 
-    - name: Upload compiled firmware as artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: compiled-firmware
-        path: |
-          arduino_uno/compiled/
-          attiny85/compiled/
-
     - name: Check memory usage
       run: |
         echo "Arduino Uno compilation results:"
@@ -60,4 +52,36 @@ jobs:
         cd ../attiny85
         arduino-cli compile --fqbn attiny:avr:ATtinyX5:cpu=attiny85,clock=internal8 attiny85.ino 2>/dev/null | grep -E "(bytes|Maximum|Global variables)"
 
-    # ZIP creation will be triggered separately and download these artifacts
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%d%m%Y')" >> $GITHUB_OUTPUT
+
+    - name: Get repository name
+      id: repo
+      run: echo "name=${GITHUB_REPOSITORY#*/}" >> $GITHUB_OUTPUT
+
+    - name: Create complete ZIP with compiled firmware
+      run: |
+        cd ..
+        # Create ZIP including source code and compiled firmware
+        zip -r ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip . \
+        -x "*.git*" \
+        -x ".github/*" \
+        --quiet
+
+        echo "Complete ZIP created: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip"
+        ls -lh ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
+
+    - name: Upload complete ZIP as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: complete-package
+        path: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
+
+    - name: Upload ZIP to release (if triggered by release)
+      if: github.event_name == 'release'
+      uses: softprops/action-gh-release@v1
+      with:
+        files: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
