--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,8 +1,10 @@
-name: Compile Arduino Sketches
+name: Compile Arduino Sketches & Auto-Release
 
 on:
   push:
     branches: [ main, master ]
+    tags:
+      - 'v*.*.*'  # Version tags like v1.0.0
   pull_request:
     branches: [ main, master ]
 
@@ -78,7 +80,50 @@ jobs:
         name: complete-package
         path: ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
 
-    - name: Upload ZIP to release (if triggered by release)
+    - name: Create automatic release (on push to main/master)
+      if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && github.event.repository.fork == false
+      run: |
+        # Check if release already exists
+        if gh release view ${{ steps.date.outputs.date }} >/dev/null 2>&1; then
+          echo "Release ${{ steps.date.outputs.date }} already exists, updating..."
+          # Update existing release with new files
+          gh release upload ${{ steps.date.outputs.date }} ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip --clobber
+        else
+          echo "Creating new release ${{ steps.date.outputs.date }}..."
+          # Create new release
+          gh release create ${{ steps.date.outputs.date }} \
+            --title "Release ${{ steps.date.outputs.date }}" \
+            --notes "## 🚀 Automated Release ${{ steps.date.outputs.date }}
+
+          This release was automatically created by the CI/CD pipeline.
+
+          ### 📦 Package Contents
+          - ✅ **Source Code**: All Arduino sketches and configurations
+          - ✅ **Compiled Firmware**: Ready-to-flash \`.hex\` files for Arduino Uno and ATTiny85
+          - ✅ **Documentation**: Complete setup guides and troubleshooting
+          - ✅ **Memory Usage**: Arduino Uno (42% flash), ATTiny85 (77% flash)
+
+          ### 🛠️ Platforms Supported
+          - **Arduino Uno**: Full-featured development platform (13,726 bytes)
+          - **ATTiny85**: Production-optimized microcontroller (1,586 bytes)
+
+          ### 📥 Download
+          Download the complete package: \`${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip\`
+
+          ### 🔧 Usage
+          1. Download the ZIP file
+          2. Extract to your Arduino projects folder
+          3. Upload the appropriate \`.ino\` file to your microcontroller
+          4. Or flash the pre-compiled \`.hex\` files directly
+
+          ---
+          *This release was automatically generated on ${{ steps.date.outputs.date }}*" \
+            ${{ steps.date.outputs.date }}_${{ steps.repo.outputs.name }}.zip
+        fi
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload ZIP to manual release (if release event)
       if: github.event_name == 'release'
       uses: softprops/action-gh-release@v1
       with:
