Enhance BLDC Motor PID Controller with PC-Powered Auto-Tune Features
- Updated the application to leverage PC computational power for advanced signal processing, including Kalman filtering and real-time stability analysis.
- Introduced one-click auto-tuning with multiple algorithms for improved PID parameter optimization.
- Enhanced the user interface with a modern dark theme and improved data visualization capabilities.
- Refined data export functionality to include filtered RPM and stability scores, providing more comprehensive analysis options.
- Updated documentation to reflect new features and installation requirements, ensuring clarity for users.

--- a/auto_tune/requirements.txt
+++ b/auto_tune/requirements.txt
@@ -1,4 +1,11 @@
+# BLDC Motor PID Controller - PC-Powered Auto-Tune
+# Install with: pip install -r requirements.txt
+
+# Core dependencies
 PyQt6>=6.4.0
-matplotlib>=3.5.0
+matplotlib>=3.6.0
 pyserial>=3.5
-numpy>=1.21.0
+numpy>=1.23.0
+
+# Advanced analysis (optional but recommended)
+scipy>=1.9.0
